--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -53,7 +53,7 @@
                             android:drawableStart="@drawable/star"
                             android:drawablePadding="10dp"
                             app:drawableTint="@color/green"
-                            tools:text="4.7 (70)" />
+                            android:text="4.7 (70)" />
 
                     </LinearLayout>
 
@@ -69,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/blue"
                             android:textSize="16sp"
-                            tools:text="Suleman Ijaz" />
+                            android:text="Moutamid Waseem" />
 
                         <TextView
                             android:id="@+id/distance"
@@ -78,7 +78,7 @@
                             android:layout_marginVertical="5dp"
                             android:textColor="@color/text"
                             android:textSize="13sp"
-                            tools:text="5 Km" />
+                            android:text="5 Km" />
 
 
                     </LinearLayout>
@@ -96,7 +96,7 @@
                     android:lines="1"
                     android:textColor="@color/text"
                     android:textSize="16sp"
-                    tools:text="+123465679" />
+                    android:text="+123465679" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -211,7 +211,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="2dp"
                 android:textSize="18sp"
-                tools:text="New Car" />
+                android:text="New Car" />
 
         </LinearLayout>
 
