--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,7 @@
                     app:ccp_showNameCode="false"/>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:boxCornerRadiusBottomEnd="12dp"
