--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -91,6 +91,7 @@
                 android:textSize="18sp"/>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="50dp"
@@ -133,6 +134,7 @@
                     app:ccp_showNameCode="false"/>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:boxCornerRadiusBottomEnd="12dp"
