--- a/app/src/main/res/layout/contact.xml
+++ b/app/src/main/res/layout/contact.xml
@@ -23,6 +23,7 @@
             app:cardElevation="0dp">
 
             <ImageView
+                android:id="@+id/image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/profile_icon" />
@@ -38,7 +39,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/postTime"
+                android:id="@+id/distance"
                 android:text="3 Km"
                 android:textColor="@color/text"
                 android:textSize="12sp"/>
@@ -54,7 +55,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/deadline"
+                android:id="@+id/rating"
                 android:text="3.2 (72)"
                 android:drawableStart="@drawable/star_regular"
                 android:drawablePadding="10dp"
