--- a/app/src/main/res/layout/home_items.xml
+++ b/app/src/main/res/layout/home_items.xml
@@ -132,6 +132,7 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
