--- a/app/src/main/res/layout/activity_request_preview.xml
+++ b/app/src/main/res/layout/activity_request_preview.xml
@@ -75,7 +75,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:id="@+id/name"
+                                    android:id="@+id/username"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/blue"
@@ -118,9 +118,62 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:lines="3"
                             android:textColor="@color/text"
                             android:text="@string/lorem" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/containImage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="100dp"
+                                app:cardBackgroundColor="@color/white"
+                                app:cardElevation="0dp"
+                                app:strokeWidth="0dp">
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/image"
+                                    app:tint="@color/blue"
+                                    android:layout_margin="10dp" />
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/containDocument"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="100dp"
+                                android:layout_marginStart="5dp"
+                                app:cardBackgroundColor="@color/white"
+                                app:cardElevation="0dp"
+                                app:strokeWidth="0dp">
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/paperclip"
+                                    app:tint="@color/blue"
+                                    android:layout_margin="10dp" />
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/madatoryItems"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                tools:listitem="@layout/category" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -165,6 +218,7 @@
                     </RelativeLayout>
 
                     <TextView
+                        android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
