--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -27,6 +27,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -36,7 +37,7 @@
             android:inputType="textImeMultiLine" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/attach_image"
+            android:id="@+id/send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
