--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,23 @@
         android:layout_below="@id/categoryRC" />
 
     <LinearLayout
+        android:id="@+id/noLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Requests Found"
+            android:textSize="24sp"
+            android:textColor="@color/green" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/micLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
