--- a/app/src/main/res/layout/activity_request_preview.xml
+++ b/app/src/main/res/layout/activity_request_preview.xml
@@ -264,53 +264,62 @@
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/contact" />
 
-                    <TextView
-                        android:id="@+id/noDocument"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:gravity="center"
-                        android:text="No Documents Attach"
-                        android:textColor="@color/blue" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/documentsRC"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:orientation="horizontal"
-                        android:visibility="gone"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/documents" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        android:id="@+id/replyLayout">
+
+                        <TextView
+                            android:id="@+id/noDocument"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:gravity="center"
+                            android:text="No Documents Attach"
+                            android:textColor="@color/blue" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/documentsRC"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:orientation="horizontal"
+                            android:visibility="gone"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/documents" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginBottom="2dp"
+                                android:layout_weight="1"
+                                android:textSize="16sp"
+                                android:text="New Car" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Order" />
+
+                        </LinearLayout>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginBottom="2dp"
-                            android:layout_weight="1"
-                            android:textSize="16sp"
-                            android:text="New Car" />
-
-                        <com.google.android.material.button.MaterialButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Order" />
+                            android:layout_marginTop="10dp"
+                            android:lines="3"
+                            android:textColor="@color/text"
+                            android:text="@string/lorem" />
 
                     </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:lines="3"
-                        android:textColor="@color/text"
-                        android:text="@string/lorem" />
 
                 </LinearLayout>
 
