--- a/app/src/main/res/layout/activity_request_response.xml
+++ b/app/src/main/res/layout/activity_request_response.xml
@@ -39,7 +39,7 @@
                     app:cardElevation="0dp">
 
                     <ImageView
-                        android:id="@+id/image"
+                        android:id="@+id/profileImage"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:src="@drawable/profile_icon" />
@@ -47,6 +47,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -65,7 +66,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/refresh"
+                    android:id="@+id/send"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -102,6 +103,7 @@
                     android:padding="12dp">
 
                     <EditText
+                        android:id="@+id/description"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:background="@null"
@@ -119,11 +121,11 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/mandatory"
+                            style="@style/Widget.Material3.Button.TextButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:icon="@drawable/circle_plus"
                             android:text="Mandatory"
-                            style="@style/Widget.Material3.Button.TextButton" />
+                            app:icon="@drawable/circle_plus" />
 
                         <Space
                             android:layout_width="match_parent"
@@ -131,17 +133,17 @@
                             android:layout_weight="1" />
 
                         <TextView
+                            android:id="@+id/deadline"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            tools:text="DeadLine : "
-                            android:id="@+id/deadline" />
+                            tools:text="DeadLine : " />
 
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/calender"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:clickable="true"
                             android:layout_marginStart="10dp"
+                            android:clickable="true"
                             app:cardBackgroundColor="@color/grey3"
                             app:cardCornerRadius="12dp"
                             app:strokeWidth="0dp">
@@ -181,9 +183,140 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:padding="12dp">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="100dp"
+                                app:cardElevation="0dp">
+
+                                <ImageView
+                                    android:id="@+id/image"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:src="@drawable/profile_icon" />
+
+                            </androidx.cardview.widget.CardView>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5dp"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/distance"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="3 Km"
+                                    android:textColor="@color/text"
+                                    android:textSize="12sp" />
+
+                                <TextView
+                                    android:id="@+id/name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Suleman Ijaz"
+                                    android:textColor="@color/blue"
+                                    android:textSize="16sp" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:drawableStart="@drawable/star_regular"
+                            android:drawablePadding="10dp"
+                            android:drawableTint="@color/green"
+                            android:text="3.2 (72)"
+                            android:textColor="@color/text"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/heading"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            tools:text="New 4x4"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/containImage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="100dp"
+                                app:cardBackgroundColor="@color/white"
+                                android:visibility="gone"
+                                app:cardElevation="0dp"
+                                app:strokeWidth="0dp">
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/image"
+                                    app:tint="@color/blue"
+                                    android:layout_margin="10dp" />
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/containDocument"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="100dp"
+                                android:visibility="gone"
+                                android:layout_marginStart="5dp"
+                                app:cardBackgroundColor="@color/white"
+                                app:cardElevation="0dp"
+                                app:strokeWidth="0dp">
+
+                                <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/paperclip"
+                                    app:tint="@color/blue"
+                                    android:layout_margin="10dp" />
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -207,20 +340,20 @@
                         android:id="@+id/noDocument"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
                         android:gravity="center"
                         android:text="No Documents Attach"
-                        android:layout_margin="10dp"
                         android:textColor="@color/blue" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/documentsRC"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:layout_margin="10dp"
+                        android:orientation="horizontal"
                         android:visibility="gone"
-                        tools:listitem="@layout/documents"
-                        android:id="@+id/documentsRC" />
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/documents" />
 
                 </LinearLayout>
 
