--- a/app/src/main/res/layout/activity_request_preview.xml
+++ b/app/src/main/res/layout/activity_request_preview.xml
@@ -296,6 +296,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/replyTitle"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
@@ -305,6 +306,7 @@
                                 android:text="New Car" />
 
                             <com.google.android.material.button.MaterialButton
+                                android:id="@+id/order"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Order" />
@@ -312,12 +314,21 @@
                         </LinearLayout>
 
                         <TextView
+                            android:id="@+id/replyDescription"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:lines="3"
                             android:textColor="@color/text"
                             android:text="@string/lorem" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/madatoryItemsReply"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/category" />
 
                     </LinearLayout>
 
