--- a/app/src/main/res/layout/documents.xml
+++ b/app/src/main/res/layout/documents.xml
@@ -21,7 +21,7 @@
             android:id="@+id/image"
             android:layout_width="70dp"
             android:layout_height="120dp"
-            android:scaleType="fitXY" />
+            android:scaleType="centerCrop" />
 
         <TextView
             android:layout_width="70dp"
