--- a/app/src/main/res/layout/activity_request_response.xml
+++ b/app/src/main/res/layout/activity_request_response.xml
@@ -316,6 +316,14 @@
 
                         </LinearLayout>
 
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/mandatoryRequester"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/category" />
+
                     </LinearLayout>
 
                 </LinearLayout>
